--- a/theitemshopfrontend/src/screens/homescreen.css
+++ b/theitemshopfrontend/src/screens/homescreen.css
@@ -5,7 +5,6 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin: 0px -30px;
     border-radius: 45px;
 }
 
@@ -24,7 +23,7 @@
     height: 100%;
     width: 74.3%;
     margin-top: 30px;
-    margin-left: 2%;
+    
     margin-bottom: 25px;
     border-radius: 35px;
     background-image: url(../images/pixel-background.jpg);
@@ -70,21 +69,14 @@
   transition: all 0.3s ease;
   margin: 0 10px 0 5px;
 }
-.priceFilterbutt:hover {
+.priceFilterbutt:hover, .ratingFilterbutt:hover {
   color: rgb(189, 187, 187);
   text-shadow: rgb(70, 68, 68);
   box-shadow: 0px 0px 0px rgb(2, 175, 11);
   top: 5px;
   left: 5px;
 }
-.ratingFilterbutt:hover {
-  color: rgb(189, 187, 187);
-  text-shadow: rgb(70, 68, 68);
-  box-shadow: 0px 0px 0px rgb(2, 175, 11);
-  top: 5px;
-  left: 5px;
-  cursor: pointer;
-}
+
 .products{
   display: flex;
   justify-content: center;
